# UniMamba-TTS

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_training.sh
configs/: config.yaml
configs/base/: audio.yaml  model.yaml
recipes/ljspeech/: prepare.sh  run.sh
tools/: compute_statistics.py  extract_durations.py  preprocess_dataset.py
unimamba_tts/: __init__.py
unimamba_tts/cli/: __init__.py  inference.py  preprocess.py  train.py
unimamba_tts/data/: __init__.py  collate.py  dataset.py  text_processing.py
unimamba_tts/losses/: __init__.py  duration_loss.py  mel_loss.py  variance_loss.py
unimamba_tts/models/: __init__.py  unimamba_tts.py
unimamba_tts/models/common/: __init__.py  mamba_block.py  position_encoding.py
unimamba_tts/models/decoder/: __init__.py  mamba_decoder.py
unimamba_tts/models/encoder/: __init__.py  mamba_encoder.py
unimamba_tts/models/variance_adaptor/: __init__.py  duration_predictor.py  energy_predictor.py  length_regulator.py  pitch_predictor.py  variance_adaptor.py
unimamba_tts/training/: __init__.py  optimizer.py  scheduler.py  trainer.py
unimamba_tts/utils/: __init__.py  alignment.py  audio.py  discord_notifier.py  logging.py  phonemizer.py
unimamba_tts/vocoder/: __init__.py
unimamba_tts/vocoder/hifigan/: __init__.py  inference.py  models.py
