[tool.poetry]
name = "unimamba-tts"
version = "0.1.0"
description = "UniMamba-TTS: Non-autoregressive TTS with Unidirectional Mamba"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
torch = "^2.5.0"
torchvision = "^0.20.0"
torchaudio = "^2.5.0"
numpy = "^1.26.0"
scipy = "^1.11.0"
librosa = "^0.10.0"
matplotlib = "^3.8.0"
tensorboard = "^2.15.0"
pyyaml = "^6.0"
tqdm = "^4.66.0"
transformers = "^4.36.0"
tokenizers = "^0.15.0"
pyworld = "^0.3.4"
phonemizer = "^3.2.0"
g2p-en = "^2.1.0"
unidecode = "^1.3.0"
inflect = "^7.0.0"
jamo = "^0.4.1"
soundfile = "^0.12.0"
resampy = "^0.4.0"
scikit-learn = "^1.3.0"
omegaconf = "^2.3.0"
hydra-core = "^1.3.0"
einops = "^0.8.0"
textgrid = "^1.6.0"
wandb = "^0.18.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
mamba-ssm = "^2.0.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.0"
ipykernel = "^6.27.0"
pytest = "^7.4.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
